Fixed calendar not jumping

--- a/ntnui/static/css/calendar.css
+++ b/ntnui/static/css/calendar.css
@@ -4,12 +4,11 @@
 #booking-container {
     height: auto;
     width: 90%;
-    padding: 0.5% 0% 1% 0%;
+    padding: 1% 0% 1.5% 0%;
 }
 
 #calendar-container {
     height: auto;
-    padding: 10px;
     background: white;
     box-shadow: 0 2px 4px rgba(50, 50, 93, 0.3);
     display: flex;
@@ -74,7 +73,7 @@
 }
 .calendar-day h1{
     font-size: 100%;
-    padding-bottom: 30%;
+    padding: 5% 0% 35% 0%;
 }
 
 .calendar-day:hover {
